--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,7 @@ header #home {
 /*Text on header page */
 header .homeText {
 	padding-top: 20%;
+
 	margin: 0 auto;
 	text-align: center;
 }
@@ -140,7 +141,6 @@ and (max-width: 768px) {
 		font-size: 1.5em;
 	}
 	header .homeText {
-		padding-top: 50%;
 		margin: 0 auto;
 		text-align: center;
 		font-size: 1.5em;
@@ -152,7 +152,19 @@ and (max-width: 768px) {
 	}
 
 }
+@media only screen
+and (max-width: 400px) and (max-height: 600px){
+	header .homeText{
+		padding-top: 40%;
+	}
+}
 
+@media only screen
+and (max-width: 700px) and (max-height: 320px){
+	header .homeText{
+		padding-top: 10%;
+	}
+}
 
 /*Header text Typed cursor*/
 
