--- a/css/style.css
+++ b/css/style.css
@@ -364,6 +364,13 @@ header .inbody .navbar-brand span.subhead {
 	padding-bottom: 100px;
 }
 
+@media screen
+and (max-width: 768px) {
+	#about {
+		padding-bottom: 0;
+	}
+}
+
 #about header{
 	text-align: center;
 	color: #000;
@@ -442,6 +449,14 @@ and (min-width: 996px)
 #about .img-padding {
 	padding: 10%;
 }
+
+#about .image_cv h3 {
+	color: #e67e22;
+	margin: 10px 0;
+	text-align: center;
+}
+
+
 
 /**  Page -- Skills **/
 
